tests/fixtures/invalid/w013/vague_name.spec
invariant data "Vague Name" {
  guarantee """something must hold"""
}
